# LangCompareV2

./: .gitmodules  .todo.swp  CMakeLists.txt  CMakeLists.txt.cpy  CONTRIBUTING.rst  COPYING  Qt_README.md  README.md  README.rst  todo  todo.md
.history/: README_20201229112959.rst  README_20201229113031.rst  README_20201229113044.rst  README_20201229113236.rst  README_20201229113435.rst  README_20201229113540.rst  README_20201229113612.rst  README_20201229113715.rst  README_20201229113930.rst  README_20201229114007.rst  README_20201229114028.rst  README_20201229114101.rst  README_20201229114140.rst  README_20201229115356.rst  README_20201229115422.rst  README_20201229115447.rst  README_20201229115509.rst  README_20201229115620.rst  README_20201229115634.rst  README_20201229115642.rst  README_20201229115657.rst  README_20201229115705.rst  README_20201229115903.rst  README_20201229115954.rst  README_20201229120020.rst  README_20201229120054.rst  README_20201229120139.rst  README_20201229120148.rst  README_20201229120157.rst  README_20201229120308.rst  README_20201229120317.rst  README_20201229120358.rst  README_20201229120409.rst  README_20201229120418.rst  README_20201229120431.rst  README_20201229120441.rst  README_20201229120501.rst  README_20201229120524.rst  README_20201229120529.rst  README_20201229120630.rst  (+356 more)
cmake/: CMakeLists.txt
code/: wrapper.cpp  wrapper.py
code/cpp/: hello_world.cpp
code/cpp/templating/: polymorphism.cpp  templating.cpp
code/helpers/: benchmarking.hpp
code/py/: Hello_World.py
src/: .main.cpp.swp  .wrappers.h.swp  CMakeLists.txt  MacOSXBundleInfo.plist.in  main.cpp  wrappers.h
src/CPP/: wrapper.cpp
src/CPP/code/: Hello_World.cpp
src/Python/: .wrapper.py.swp  wrapper.py
src/Python/code/: Hello_World.py
src/helpers/: CMakeLists.txt  clear_console.h  helpers.cpp  helpers.h
src/languages/: CMakeLists.txt  code.cpp  code.h  code_cpp.cpp  code_cpp.h  code_python.cpp  code_python.h  compile_and_run_failure.h  cpp_code.cpp  cpp_code.h  languages.cpp  languages.h  python_code.cpp  python_code.h  results.cpp  results.h
src/qml/: CMakeLists.txt  main.qml
src/qml/components/: CodeButton.qml  RunConsole.qml  components.qrc  create_code_button.js
src/qml/pages/: AddCodePage copy.qml  AddCodePage.qml  EditCodePage.qml  EditPage.qml  ResultsPage.qml  SelectPage.qml  pages.qrc
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt
tests/src/helpers/: CMakeLists.txt  helpers_tests.cpp
tests/src/languages/: CMakeLists.txt  code_tests.cpp  cpp_code_tests.cpp  languages_tests.cpp
tests/src/languages/test_code/cpp/: timeout.cpp
tests/src/languages/test_code/py/: timeout.py
tests/src/languages/test_code/py/submodule/: hello_submodule.py
tests/src/languages/test_code/py/test_package/: hello_module.py  hello_module2.py
